--- a/project0.css
+++ b/project0.css
@@ -1,3 +1,79 @@
-h1 {
+@import url(http://allfont.net/allfont.css?fonts=pricedown);
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Pricedown', arial;
+}
+
+.background {
+    background-color: grey;
+    height: 100vh;
+    padding-top: 1px;
+}
+
+.title {
+    color: white;
     text-align: center;
+    margin-top: 10%;
+    font-size: 40px;
+}
+
+.display {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.hide {
+    display: none;
+}
+
+.container {
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 33% 33% 33%;
+    max-width: 400px;
+    max-height: 400px;
+}
+
+.tile {
+    border: 1px solid white;
+    min-width: 100px;
+    min-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    cursor: pointer;
+}
+
+.playerX {
+    color: red;
+}
+
+.playerO {
+    color: blue;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+}
+
+#reset {
+    background-color: grey;
+    color: white;
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+    font-size: 30px;
+    margin-left: 1em;
+    cursor: pointer;
 }
